# phil

./: .flake8  .gitignore  README.md  noxfile.py  setup.cfg
.github/workflows/: ci.yml
notebooks/: Untitled.ipynb  example_usage.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
phil/: bincard.py  console.py  deck.py  distribution.py  exceptions.py  simulation.py  simulator.py  table.py  utils.py
phil/game/: _debug.py  betting.py  events.py  game.py  player.py  policies.py
tests/: test_deck.py  test_table.py
