[metadata]
name = phil
author = Omar Sosa Rodriguez
author_email = omarfsosa@gmail.com
description = Python Poker Calculator
version = attr: phil.__version__
url = https://github.com/omarfsosa/poker
keywords =
  poker
  statistics
  calculator
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
license_files =
#   LICENSE.txt

[options]
python_requires = >= 3.10.0
packages = find:
zip_safe = False
install_requires =
#  numpy

[options.extras_require]
test =
  pytest
  # flake8
  # mypy
dev =
  black
  flake8
  isort
  nox

[options.entry_points]
console_scripts =
  phily = phil.console:win_probability
#  joesprog = mypkg:__main__:cli